Fixed Navbar collapse issue

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,13 @@
               const $target = document.getElementById(target);
               el.classList.toggle("is-active");
               $target.classList.toggle("is-active");
+              $target.classList.add("nb-is-active");
+              console.log("Click");
             });
           });
         }
       });
     </script>
   </body>
+  >
 </html>
