--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <!-- built files will be auto injected -->
 
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
+      document.addEventListener("triggerBuger", () => {
         const $navbarBurgers = Array.prototype.slice.call(
           document.querySelectorAll(".navbar-burger"),
           0
@@ -36,7 +36,7 @@
             });
           });
         }
-      });
+      }, false);
     </script>
   </body>
   >
