Added sponsors page and facebook chat

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>NASA SpaceApps Sri Lanka</title>
   </head>
   <body>
     <noscript>
@@ -18,25 +18,58 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
     <script>
-      document.addEventListener("triggerBuger", () => {
-        const $navbarBurgers = Array.prototype.slice.call(
-          document.querySelectorAll(".navbar-burger"),
-          0
-        );
-        if ($navbarBurgers.length > 0) {
-          $navbarBurgers.forEach((el) => {
-            el.addEventListener("click", () => {
-              const target = el.dataset.target;
-              const $target = document.getElementById(target);
-              el.classList.toggle("is-active");
-              $target.classList.toggle("is-active");
-              $target.classList.add("nb-is-active");
-              console.log("Click");
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml: true,
+          version: "v8.0",
+        });
+      };
+
+      (function(d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
+
+    <!-- Your Chat Plugin code -->
+    <div
+      class="fb-customerchat"
+      attribution="setup_tool"
+      page_id="637394013565759"
+      theme_color="#c54da0"
+    ></div>
+
+    <script>
+      document.addEventListener(
+        "triggerBuger",
+        () => {
+          const $navbarBurgers = Array.prototype.slice.call(
+            document.querySelectorAll(".navbar-burger"),
+            0
+          );
+          if ($navbarBurgers.length > 0) {
+            $navbarBurgers.forEach((el) => {
+              el.addEventListener("click", () => {
+                const target = el.dataset.target;
+                const $target = document.getElementById(target);
+                el.classList.toggle("is-active");
+                $target.classList.toggle("is-active");
+                $target.classList.add("nb-is-active");
+                console.log("Click");
+              });
             });
-          });
-        }
-      }, false);
+          }
+        },
+        false
+      );
     </script>
   </body>
   >
